--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Film Browser</title>
+  
+  <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 
   <base href="/" />
 
@@ -24,3 +28,4 @@
 </body>
 
 </html>
+
